fixed bugs regarding form and made sure function plot didn't plot too large y values

--- a/basic-ml-client/src/common/graphing/Plot.css
+++ b/basic-ml-client/src/common/graphing/Plot.css
@@ -10,3 +10,8 @@ svg {
       width: 50%;
       height: 600px;
   }
+
+  .content {
+      width: 100%;
+      height: 100%
+  }
